// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShipmentFocused no batch 1`] = `
Array [
  Object {
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "BATCH_ALL",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "SHIPMENT",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;

exports[`ShipmentFocused normal case 1`] = `
Array [
  Object {
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "BATCH_ALL",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "SHIPMENT",
  },
  Object {
    "type": "ORDER_ITEM",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "ORDER_ITEM",
  },
  Object {
    "type": "LINK-0",
  },
  Object {
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;
